--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build openapi.json
         run: |
           mkdir gh_pages
-          poetry run python -c "from lrqc.main import app; import json; output = open('gh-pages/openapi.json', 'w'); json.dump(app.openapi(), output); output.close()"
+          poetry run python -c "from lang_qc.main import app; import json; output = open('gh-pages/openapi.json', 'w'); json.dump(app.openapi(), output); output.close()"
 
       - name: Deploy github pages
         uses: JamesIves/github-pages-deploy-action@v4.3.3
