--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,24 @@ on:
     branches: [master, devel]
   pull_request:
     branches: [master, devel]
-    
+
 jobs:
+  test-packaging:
+    runs-on: ubuntu-latest
+  
+    steps:
+      - uses: actions/checkout@v3
+  
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
+          architecture: 'x64'
+  
+      - name: "Run pip install"
+        run: |
+          pip install .
+      
+  
   test:
     runs-on: ubuntu-latest
     
