conftest.py: Add TestClient dependency override of QC DB connection.
Also add QC DB connection section to testdb.ini

--- a/tests/testdb.ini
+++ b/tests/testdb.ini
@@ -1,6 +1,6 @@
 # Credentials to be used for unit tests.
 #
-# GitHub Actions CI should set up a MySQL service matching these credentials.
+# GitHub Actions CI should set up two MySQL services matching these credentials.
 # If you are running tests on your local development machine, you can start a
 # suitable Docker container like so:
 #
@@ -11,9 +11,23 @@
 #     -e MYSQL_PASSWORD=test \
 #     -e MYSQL_DATABASE=mlwarehouse "mysql:$MYSQL_VERSION"
 #
-[MySQL]
+# docker run --network host -d \
+#     -e MYSQL_RANDOM_ROOT_PASSWORD=yes \
+#     -e MYSQL_TCP_PORT=3307 \
+#     -e MYSQL_USER=test \
+#     -e MYSQL_PASSWORD=test \
+#     -e MYSQL_DATABASE=langqc "mysql:$MYSQL_VERSION"
+
+[MySQL MLWH]
 user = test
 password = test
 ip_address = 127.0.0.1
 port = 3306
 schema = mlwarehouse
+
+[MySQL QCDB]
+user = test
+password = test
+ip_address = 127.0.0.1
+port = 3307
+schema = langqc
