--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ flake8 = "^4.0.1"
 pytest = "^7.1.1"
 fastapi = { extras = ["all"], version = "^0.78.0" }
 sqlacodegen = { git = "http://github.com/agronholm/sqlacodegen.git", tag="3.0.0rc1" }
+alembic = "^1.8.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
