--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 **/__pycache__/
 .pytest_cache/
+
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
