Tiny httpd image for longue_vue.
Signed-off-by: Adam Blanchet <ab59@sanger.ac.uk>

--- a/docker/proxy/000-default.conf
+++ b/docker/proxy/000-default.conf
@@ -17,8 +17,8 @@
     ProxyPassReverse /openapi.json http://lang_qc:8181/openapi.json    
     
     # Proxy to longue_vue
-    ProxyPass /ui/ http://longue_vue:3000/
-    ProxyPassReverse /ui/ http://longue_vue:3000/
+    ProxyPass /ui/ http://longue_vue/
+    ProxyPassReverse /ui/ http://longue_vue/
     
     # Require login for the whole site
     <Location />
