--- a/docker/proxy/Dockerfile
+++ b/docker/proxy/Dockerfile
@@ -2,9 +2,10 @@ FROM ubuntu:focal
 
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN apt-get update -qq\
-  && apt-get install -qq apache2 libapache2-mod-auth-openidc
-  
+RUN apt-get update -qq \
+  && apt-get install -qq  --no-install-recommends apache2 libapache2-mod-auth-openidc ca-certificates \
+  && rm -rf /var/lib/apt/lists/*
+
 COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
 
 RUN a2enmod proxy\
@@ -22,4 +23,4 @@ RUN a2enmod proxy\
   && ln -sf /dev/stdout /var/log/apache2/other_vhosts_access.log \
   && ln -sf /dev/stderr /var/log/apache2/error.log
 
-CMD apachectl -D FOREGROUND
+CMD ["apachectl", "-D", "FOREGROUND"]
