--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,18 @@
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
+    "@testing-library/vue": "^6.6.1",
     "@vitejs/plugin-vue": "^3.0.1",
+    "@vue/test-utils": "^2.0.2",
+    "c8": "^7.12.0",
+    "cross-fetch": "^3.1.5",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
+    "jsdom": "^20.0.0",
     "start-server-and-test": "^1.14.0",
-    "vite": "^3.0.1"
+    "testing-library": "^0.0.2",
+    "vite": "^3.0.1",
+    "vitest": "latest",
+    "vitest-fetch-mock": "^0.2.1"
   }
 }
