Allow the proxy container to shutdown gracefully.
Running the apache2 server through apache2ctl did not allow
apache2 to get the signal to shutdown. This caused the service
to always be abruptly killed once a 10s timeout was reached
after stopping the other containers.

Signed-off-by: Adam Blanchet <ab59@sanger.ac.uk>

--- a/docker/proxy/Dockerfile
+++ b/docker/proxy/Dockerfile
@@ -21,6 +21,14 @@ RUN a2enmod proxy\
   # Redirect logs to stdout/stderr for easier docker logging.
   && ln -sf /dev/stdout /var/log/apache2/access.log \
   && ln -sf /dev/stdout /var/log/apache2/other_vhosts_access.log \
-  && ln -sf /dev/stderr /var/log/apache2/error.log
+  && ln -sf /dev/stderr /var/log/apache2/error.log \
+  # Apache2 seems to need this folder when run directly
+  # apache2ctl usually checks if it exists and makes it / cleans it up
+  && mkdir /var/run/apache2
 
-CMD ["apachectl", "-D", "FOREGROUND"]
+# Allow apache2 to shutdown gracefully
+STOPSIGNAL SIGWINCH
+
+COPY start.sh /start.sh
+
+CMD ["/start.sh"]
