Only bind-mount public and src folders into node container.
Signed-off-by: Adam Blanchet <ab59@sanger.ac.uk>

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -41,4 +41,5 @@ services:
       context: ./frontend
       target: development
     volumes:
-      - ./frontend:/code/longue_vue/
+      - ./frontend/src:/code/longue_vue/src/
+      - ./frontend/public:/code/longue_vue/public/
