Add more things into the node development container.
frontend/{src,public} are bind-mountend at container runtime,
but vite.config.js and index.html are not. This caused vite
to not run properly because of missing configuration and files
in the container.

Signed-off-by: Adam Blanchet <ab59@sanger.ac.uk>

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -22,4 +22,9 @@ COPY --from=production-build-stage /code/longue_vue/dist/ /usr/local/apache2/htd
 
 FROM base-stage as development
 
+RUN npm install --include=dev
+
+COPY ./vite.config.js /code/longue_vue/vite.config.js
+COPY ./index.html /code/longue_vue/index.html
+
 CMD ["npm", "exec", "vite", "--", "--host", "--port", "80", "--base", "/ui/"]
