Experimental setup for login, logout and userinfo in SPA.
Signed-off-by: Adam Blanchet <ab59@sanger.ac.uk>

--- a/docker/proxy/000-default.conf
+++ b/docker/proxy/000-default.conf
@@ -21,9 +21,23 @@
     ProxyPassReverse /ui/ http://longue_vue/
     
     # Require login for the whole site
-    <Location />
+    <Location /pacbio>
         AuthType openid-connect
         Require valid-user
+        OIDCUnAuthAction 401
+    </Location>
+    
+    <Location /login-redirect>
+        AuthType openid-connect
+        Require valid-user
+        OIDCUnAuthAction auth
+    </Location>
+    
+    <Location /ui/login>
+        AuthType openid-connect
+        Require valid-user
+        OIDCUnAuthAction auth
+        
     </Location>
     
     # Set OIDC configuration
@@ -35,6 +49,7 @@
     OIDCRedirectURI ${OIDCRedirectURI}
     OIDCCryptoPassphrase ${OIDCCryptoPassphrase}
     OIDCScope "openid email"
+    OIDCInfoHook userinfo
 
     # Redirect from root to the root of the web app.
     RedirectMatch 301 ^/$ /ui/
