--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,3 +36,7 @@ jobs:
       - name: Run flake8
         run: |
           poetry run flake8
+
+      - name: Run isort
+        run: |
+          poetry run isort --check --diff --color .
