Prevent caching of auth cookies

--- a/docker/proxy/000-default.conf
+++ b/docker/proxy/000-default.conf
@@ -31,13 +31,16 @@
         AuthType openid-connect
         Require valid-user
         OIDCUnAuthAction auth
+        Header set Cache-Control "private"
+        Header set Cache-Control "no-cache"
     </Location>
     
     <Location /ui/login>
         AuthType openid-connect
         Require valid-user
         OIDCUnAuthAction auth
-        
+        Header set Cache-Control "private"
+        Header set Cache-Control "no-cache"
     </Location>
     
     # Set OIDC configuration
@@ -50,6 +53,7 @@
     OIDCCryptoPassphrase ${OIDCCryptoPassphrase}
     OIDCScope "openid email"
     OIDCInfoHook userinfo
+    OIDCSessionInactivityTimeout 300
 
     # Redirect from root to the root of the web app.
     RedirectMatch 301 ^/$ /ui/
