--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview --port 3000",
     "test:e2e": "start-server-and-test preview http://localhost:3000/ 'cypress open --e2e'",
     "test:e2e:ci": "start-server-and-test preview http://localhost:3000/ 'cypress run --e2e'",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs"
   },
   "dependencies": {
     "lodash": "^4.17.21",
