--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "dev": "vite --port 3000",
     "build": "vite build",
     "preview": "vite preview --port 3000",
-    "test:e2e": "start-server-and-test preview http://localhost:3000/ 'cypress open --e2e'",
+    "test": "vitest run",
+    "coverage": "vitest run --coverage",
     "test:e2e:ci": "start-server-and-test preview http://localhost:3000/ 'cypress run --e2e'",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs"
   },
