Set github action working directory for frontend tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,4 +91,6 @@ jobs:
         with:
           node-version: '18'
       - run: npm install
+        working-directory: ./frontend
       - run: npm run test
+        working-directory: ./frontend
