--- a/docker/proxy/000-default.conf
+++ b/docker/proxy/000-default.conf
@@ -8,6 +8,8 @@
     # Example:
 
     # Proxy to lang_qc API server
+    ProxyPass  /openapi/ http://lang_qc:8181/openapi/
+    ProxyPassReverse /openapi/ http://lang_qc:8181/openapi/
     ProxyPass  /api/ http://lang_qc:8181/
     ProxyPassReverse /api/ http://lang_qc:8181/
 
