--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "lodash": "^4.17.21",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2",
-    "vue3-tabs-component": "^1.1.0"
+    "vue3-tabs-component": "^1.1.0",
+    "vue-awesome-paginate": "=1.0.5"
   },
   "devDependencies": {
     "@testing-library/vue": "^6.6.1",
