--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.2",
+    "vue3-tabs-component": "^1.1.0"
   },
   "devDependencies": {
     "@testing-library/vue": "^6.6.1",
@@ -32,6 +33,7 @@
     "testing-library": "^0.0.2",
     "vite": "^3.0.1",
     "vitest": "latest",
-    "vitest-fetch-mock": "^0.2.1"
+    "vitest-fetch-mock": "^0.2.1",
+    "vue3-tabs-component": "^1.1.0"
   }
 }
