--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "jsdom": "^20.0.0",
+    "pinia": "^2.0.23",
     "start-server-and-test": "^1.14.0",
     "testing-library": "^0.0.2",
     "vite": "^3.0.1",
