--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "element-plus": "^2.2.18",
     "lodash": "^4.17.21",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.2",
+    "pinia": "^2.0.23"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.0.14",
     "@testing-library/vue": "^6.6.1",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/test-utils": "^2.0.2",
