--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,15 +17,15 @@
   "dependencies": {
     "element-plus": "^2.2.18",
     "lodash": "^4.17.21",
+    "pinia": "^2.0.23",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2",
-    "pinia": "^2.0.23"
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@pinia/testing": "^0.0.14",
     "@testing-library/vue": "^6.6.1",
     "@vitejs/plugin-vue": "^3.0.1",
-    "@vue/test-utils": "^2.0.2",
+    "@vue/test-utils": "^2.2.4",
     "c8": "^7.12.0",
     "cross-fetch": "^3.1.5",
     "eslint": "^8.5.0",
