--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   lint:
-    
+
     runs-on: ubuntu-latest
 
     steps:
@@ -17,13 +17,13 @@ jobs:
       - name: Install Poetry
         run: |
           pipx install poetry
-      
+
       - uses: actions/setup-python@v3
         with:
           python-version: '3.10'
           architecture: 'x64'
           # cache: 'poetry'
-      
+
       - name: Run poetry install
         run: |
           poetry env use '3.10'
@@ -40,3 +40,15 @@ jobs:
       - name: Run isort
         run: |
           poetry run isort --check --diff --color .
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+
+      - name: Set up JS requirements
+        run: npm install
+        working-directory: ./frontend
+
+      - name: Run ESLint
+        run: npm run lint
+        working-directory: ./frontend
