Update API access to always permit GET, but require OKTA auth to POST

--- a/docker/proxy/000-default.conf
+++ b/docker/proxy/000-default.conf
@@ -1,12 +1,4 @@
 <VirtualHost *:443>
-    # ProxyPreserveHost On
-    # Servers to proxy the connection, or;
-    # List of application servers:
-    # Usage:
-    # ProxyPass / http://[IP Addr.]:[port]/
-    # ProxyPassReverse / http://[IP Addr.]:[port]/
-    # Example:
-
     # Proxy to lang_qc API server
     ProxyPass  /openapi/ http://lang_qc:8181/openapi/
     ProxyPassReverse /openapi/ http://lang_qc:8181/openapi/
@@ -17,10 +9,15 @@
     ProxyPass /ui/ http://longue_vue/
     ProxyPassReverse /ui/ http://longue_vue/
 
+    SetEnvIf Request_Method (GET|HEAD|OPTIONS) harmless
+
     # Require login for pacbio data API
     <Location /api/pacbio>
         AuthType openid-connect
-        Require valid-user
+        <RequireAny>
+            Require valid-user
+            Require env harmless
+        </RequireAny>
         OIDCUnAuthAction 401
     </Location>
 
