Change to cleaner apache request method detection

--- a/docker/proxy/000-default.conf
+++ b/docker/proxy/000-default.conf
@@ -9,14 +9,12 @@
     ProxyPass /ui/ http://longue_vue/
     ProxyPassReverse /ui/ http://longue_vue/
 
-    SetEnvIf Request_Method (GET|HEAD|OPTIONS) harmless
-
     # Require login for pacbio data API
     <Location /api/pacbio>
         AuthType openid-connect
         <RequireAny>
             Require valid-user
-            Require env harmless
+            Require method GET HEAD OPTIONS
         </RequireAny>
         OIDCUnAuthAction 401
     </Location>
