Explicitly copy the .env file into the container.
Explicitly copy the .env file into the UI docker
container, needd in the dev mode.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -25,5 +25,6 @@ RUN npm install --include=dev
 
 COPY ./vite.config.js /code/longue_vue/vite.config.js
 COPY ./index.html /code/longue_vue/index.html
+COPY ./.env /code/longue_vue/.env
 
 CMD ["npm", "exec", "vite", "--", "--host", "--port", "80", "--base", "/ui/"]
