Harmonise styling of el- and regular text in QcView

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "element-plus": "^2.2.18",
     "lodash": "^4.17.21",
     "pinia": "^2.0.23",
