--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ license = "GPL-3.0-or-later"
 python = "^3.10"
 fastapi = { version = "^0.78", extras = ["standard"] }
 uvicorn = { version = "^0.17", extras = ["standard"] }
+cryptography = { version = "^40.0.2" }
 SQLAlchemy = { version = ">=1.4.35, < 1.4.46", extras = ["pymysql"] }
 # langqc will be incompatible with sqlalchemy 2.0. Pin version just before the deprecation warnings start
 pydantic = "^1.9.0"
