--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,7 @@ python = "^3.10"
 fastapi = { version = "^0.78", extras = ["standard"] }
 uvicorn = { version = "^0.17", extras = ["standard"] }
 cryptography = { version = "^40.0.2" }
-SQLAlchemy = { version = ">=1.4.35, < 1.4.46", extras = ["pymysql"] }
-# langqc will be incompatible with sqlalchemy 2.0. Pin version just before the deprecation warnings start
+SQLAlchemy = { version = "^2.0.1", extras = ["pymysql"] }
 pydantic = "^1.9.0"
 npg_id_generation = { git = "https://github.com/wtsi-npg/npg_id_generation.git", tag="3.0.0" }
 
