Allow library_tube_barcode to be null, and update test cases

--- a/tests/data/mlwh_pb_run_92/200-PacBioRun.yml
+++ b/tests/data/mlwh_pb_run_92/200-PacBioRun.yml
@@ -7,6 +7,7 @@
   id_study_tmp: 6287
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-506
   pac_bio_library_tube_id_lims: 289
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: TOL_ASG12404704
@@ -35,6 +36,7 @@
   id_study_tmp: 6287
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-506
   pac_bio_library_tube_id_lims: 290
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: TOL_ASG12404706
@@ -63,6 +65,7 @@
   id_study_tmp: 5735
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-506
   pac_bio_library_tube_id_lims: 291
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: DTOL12273960
@@ -91,6 +94,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 316
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764986
@@ -119,6 +123,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 317
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764987
@@ -147,6 +152,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 318
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764988
@@ -175,6 +181,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 319
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764989
@@ -203,6 +210,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 320
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764990
@@ -231,6 +239,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 321
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764991
@@ -259,6 +268,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 322
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764992
@@ -287,6 +297,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 323
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764993
@@ -315,6 +326,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 324
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764994
@@ -343,6 +355,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 325
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764995
@@ -371,6 +384,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 326
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764996
@@ -399,6 +413,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 327
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764997
@@ -427,6 +442,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 328
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764998
@@ -455,6 +471,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 329
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412764999
@@ -483,6 +500,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 330
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765000
@@ -511,6 +529,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 331
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765001
@@ -539,6 +558,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 332
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765002
@@ -567,6 +587,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 333
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765003
@@ -595,6 +616,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 334
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765004
@@ -623,6 +645,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 335
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765005
@@ -651,6 +674,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 336
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765006
@@ -679,6 +703,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 337
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765007
@@ -707,6 +732,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 338
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765008
@@ -735,6 +761,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 339
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765009
@@ -763,6 +790,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 340
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765010
@@ -791,6 +819,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 341
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765011
@@ -819,6 +848,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 342
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765012
@@ -847,6 +877,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 343
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765013
@@ -875,6 +906,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 344
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765014
@@ -903,6 +935,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 345
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765015
@@ -931,6 +964,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 346
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765016
@@ -959,6 +993,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 347
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765017
@@ -987,6 +1022,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 348
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765018
@@ -1015,6 +1051,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 349
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765019
@@ -1043,6 +1080,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 350
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765020
@@ -1071,6 +1109,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 351
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765021
@@ -1099,6 +1138,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 352
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765022
@@ -1127,6 +1167,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 353
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765023
@@ -1155,6 +1196,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 354
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765024
@@ -1183,6 +1225,7 @@
   id_study_tmp: 6942
   last_updated: 2022-09-27 12:50:00
   library_created_at: ~
+  pac_bio_library_tube_barcode: TRAC-2-533
   pac_bio_library_tube_id_lims: 355
   pac_bio_library_tube_legacy_id: ~
   pac_bio_library_tube_name: MQ201412765025
