--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ name = "npg_langqc"
 packages = [
   { include = "lang_qc" },
 ]
-version = "1.3.0"
+version = "1.4.0"
 description = "FastAPI application for Long Read QC"
-authors = ["Adam Blanchet", "Marina Gourtovaia mg8@sanger.ac.uk", "Kieron Taylor kt19@sanger.ac.uk"]
+authors = ["Adam Blanchet", "Marina Gourtovaia <mg8@sanger.ac.uk>", "Kieron Taylor <kt19@sanger.ac.uk>"]
 license = "GPL-3.0-or-later"
 
 [tool.poetry.dependencies]
