--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ uvicorn = { version = "^0.17", extras = ["standard"] }
 cryptography = { version = "^40.0.2" }
 SQLAlchemy = { version = "^2.0.1", extras = ["pymysql"] }
 pydantic = "^2.4"
+pydantic-settings = "^2.0"
 npg_id_generation = { git = "https://github.com/wtsi-npg/npg_id_generation.git", branch="devel" }
 
 [tool.poetry.dev-dependencies]
