Pinned element-plus JS package to 2.4.4
This is the last release that works for us.
2.5.0 and 2.5.1 breaks out tests.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
-    "element-plus": "^2.3.7",
+    "element-plus": "2.4.4",
     "lodash": "^4.17.21",
     "pinia": "^2.0.23",
     "vue": "^3.2.37",
